@startuml

    namespace ua.khpi.oop.malokhvii05.util.algorithms {

        interface Algorithm<T> {
            {abstract} +isNull(): boolean
        }

        abstract class AbstractAlgorithmWithComparator<T> {
            +AbstractAlgorithmWithComparator(Comparator<T>)
        }

        abstract class NullAlgorithm<T> {
            +NullAlgorithm()
            +isNull(): boolean
        }

        interface AlgorithmWithComparator<T> {
        }

        abstract class NullAlgorithmWithComparator<T> {
            +NullAlgorithmWithComparator()
        }

        class ua.khpi.oop.malokhvii05.util.algorithms.NullAlgorithmWithComparator.DefaultComparator {
            -DefaultComparator()
            +compare(T, T): int
        }

        AlgorithmWithComparator <|.. AbstractAlgorithmWithComparator

        Algorithm <|.. NullAlgorithm

        Algorithm <|.. AlgorithmWithComparator

        NullAlgorithm <|-- NullAlgorithmWithComparator

        AlgorithmWithComparator <|.. NullAlgorithmWithComparator

        interface java.util.Comparator<T> {
            {abstract} +compare(T, T): int
        }
        java.util.Comparator <|.. ua.khpi.oop.malokhvii05.util.algorithms.NullAlgorithmWithComparator.DefaultComparator

        NullAlgorithmWithComparator +-- ua.khpi.oop.malokhvii05.util.algorithms.NullAlgorithmWithComparator.DefaultComparator

        AbstractAlgorithmWithComparator --> java.util.Comparator: comparator

        AlgorithmWithComparator --> java.util.Comparator: comparator

        NullAlgorithmWithComparator --> java.util.Comparator: defaultComparator\ncomparator

    }

@enduml
